--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             </div>
            </div>
          </div>                
-         
+
          <footer class="footer"> 
             <div class="grid">
                 <div class="grid__row">
@@ -477,13 +477,13 @@
                     <div class="grid__column-5">
                         <h3 class="footer__heading">Vào cửa hàng trên ứng dụng</h3>
                         <div class="footer__dowload">
-                            <img src="/assets/img/qrcode/qr_code.png" alt="QR" class="footer__dowload-qr">
+                            <img src="https://docholag.github.io/docholag_shop/assets/img/qrcode/qr_code.png" alt="QR" class="footer__dowload-qr">
                             <div class="footer__dowload-apps">
                                 <a href="" class="footer__dowload-apps-link">
-                                    <img src="/assets/img/qrcode/appstore.png" alt="ggplay" class="footer__dowload-app-img">
+                                    <img src="https://docholag.github.io/docholag_shop/assets/img/qrcode/appstore.png" alt="ggplay" class="footer__dowload-app-img">
                                 </a>
                                 <a href="" class="footer__dowload-apps-link">
-                                    <img src="/assets/img/qrcode/ggplay.png" alt="appstore" class="footer__dowload-app-img">
+                                    <img src="https://docholag.github.io/docholag_shop/assets/img/qrcode/ggplay.png" alt="appstore" class="footer__dowload-app-img">
                                 </a>
                             </div>
                         </div>
