--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                             <div class="header__qr">
                                 <img src="./assets/img/qrcode/qr_code.png" alt="QR code" class="header__qr-img">
                                 <div class="header__qr-apps">
-                                   <a href="" class="header__qr-link">
+                                   <a href="#" class="header__qr-link">
                                     <img src="./assets/img/qrcode/appstore.png" alt="Google Play" class="header__qr-dowload-img">
                                    </a>
-                                   <a href="" class="header__qr-link"> <!--dùng thẻ a để khỏi bị méo ảnh khi css-->
+                                   <a href="#" class="header__qr-link"> <!--dùng thẻ a để khỏi bị méo ảnh khi css-->
                                     <img src="./assets/img/qrcode/ggplay.png" alt="App Store" class="header__qr-dowload-img">
                                    </a>
 
@@ -48,13 +48,13 @@
                     </ul>
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item">
-                            <a href="" class="header__navbar-item-link">
+                            <a href="#" class="header__navbar-item-link">
                                 <i class="header__navbar-icon fas fa-bell"></i>
                                 Thông báo
                             </a>
                         </li>
                         <li class="header__navbar-item">
-                            <a href="" class="header__navbar-item-link">
+                            <a href="#" class="header__navbar-item-link">
                                 <i class="header__navbar-icon fas fa-question-circle"></i>
                                 Trợ giúp
                             </a>
@@ -174,58 +174,58 @@
                         <div class="grid__row">
                             <div class="gird__column-2-4">
                                 <!--sản phẩm-->
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/select-airpods">
                                     <img src="./assets/img/product/1.png" alt="" class="home-product-item__img">
                                 </a>
                             </div>
 
                             <div class="gird__column-2-4">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/select-airpods">
                                     <img src="./assets/img/product/2.png" alt="" class="home-product-item__img">
                                 </a>
                             </div>
                             <div class="gird__column-2-4">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/buy-airpods/airpods-max">
                                     <img src="./assets/img/product/3.png" alt="" class="home-product-item__img">
                                 </a>
                             </div>
                             <div class="gird__column-2-4">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/store">
                                     <img src="./assets/img/product/4.png" alt="" class="home-product-item__img">
                                 </a>
                             </div>
                             <div class="gird__column-2-4">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/store">
                                     <img src="./assets/img/product/5.png" alt="" class="home-product-item__img">
                                 </a>
                             </div>
 
                             <div class="gird__column-2-4">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/store">
                                     <img src="./assets/img/product/6.png" alt="" class="home-product-item__img">
                                 </a>
                             </div>
 
                             <div class="gird__column-2-4">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/store">
                                     <img src="./assets/img/product/7.png" alt="" class="home-product-item__img">
                                 </a>
                             </div>
 
                             <div class="gird__column-2-4">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/store">
                                     <img src="./assets/img/product/8.png" alt="" class="home-product-item__img">
                                 </a>
                             </div>
 
                             <div class="gird__column-2-4">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/store">
                                     <img src="./assets/img/product/9.png" alt="" class="home-product-item__img">
                                 </a>
                             </div>
 
                             <div class="gird__column-2-4">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/store">
                                     <img src="./assets/img/product/10.png" alt="" class="home-product-item__img">
                                 </a>
                             </div>
@@ -253,23 +253,23 @@
                             <div class="grid__row">
                                 <div class="grid__column50-50">
                                     <!--sản phẩm-->
-                                    <a class="home-product-item" href="">
+                                    <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/1.png" alt="" class="home-product-item__img-2">
                                     </a>
                                 </div>
     
                                 <div class="grid__column50-50">
-                                    <a class="home-product-item" href="">
+                                    <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/2.png" alt="" class="home-product-item__img-2">
                                     </a>
                                 </div>
                                 <div class="grid__column50-50">
-                                    <a class="home-product-item" href="">
+                                    <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/3.png" alt="" class="home-product-item__img-2">
                                     </a>
                                 </div>
                                 <div class="grid__column50-50">
-                                    <a class="home-product-item" href="">
+                                    <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/4.png" alt="" class="home-product-item__img-2">
                                     </a>
                                 </div>
@@ -301,13 +301,13 @@
                         <div class="grid__row">
                             <div class="grid__column50-50">
                                 <!--sản phẩm-->
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/imac">
                                     <img src="./assets/img/product3/1.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
 
                             <div class="grid__column50-50">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/imac">
                                     <img src="./assets/img/product3/2.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
@@ -335,23 +335,23 @@
                         <div class="grid__row">
                             <div class="grid__column50-50">
                                 <!--sản phẩm-->
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/1.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
 
                             <div class="grid__column50-50">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/2.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
                             <div class="grid__column50-50">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/3.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
                             <div class="grid__column50-50">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/4.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
@@ -380,13 +380,13 @@
                         <div class="grid__row">
                             <div class="grid__column50-50">
                                 <!--sản phẩm-->
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-air">
                                     <img src="./assets/img/product5/1.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
 
                             <div class="grid__column50-50">
-                                <a class="home-product-item" href="">
+                                <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-air">
                                     <img src="./assets/img/product5/2.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
