--- a/index.html
+++ b/index.html
@@ -141,19 +141,19 @@
         <nav class="mobile-category">
             <ul class="mobile-category__list">
                 <li class="mobile-category__item">
-                    <a href="" class="mobile-category__link">PHỤ KIỆN APPLE</a>
+                    <a href="#PK-apple" class="mobile-category__link">PHỤ KIỆN APPLE</a>
                 </li>
                 <li class="mobile-category__item">
-                    <a href="" class="mobile-category__link">MAC MINI M1</a>
+                    <a href="#mac-mini" class="mobile-category__link">MAC MINI M1</a>
                 </li>
                 <li class="mobile-category__item">
-                    <a href="" class="mobile-category__link">IMAC M1</a>
+                    <a href="#imac" class="mobile-category__link">IMAC M1</a>
                 </li>
                 <li class="mobile-category__item">
-                    <a href="" class="mobile-category__link">MACBOOK PRO M1</a>
+                    <a href="#mac-pro" class="mobile-category__link">MACBOOK PRO M1</a>
                 </li>
                 <li class="mobile-category__item">
-                    <a href="" class="mobile-category__link">MACBOOK AIR M1</a>
+                    <a href="#mac-air" class="mobile-category__link">MACBOOK AIR M1</a>
                 </li>
             </ul>
         </nav>
@@ -273,28 +273,28 @@
                 <!--responsive-->
                <div class="grid wide">
                 <div class="row">
-                    <div class="grid__column-100">
+                    <div class="grid__column-100 col m-12 c-12">
                         <div class="home__product">
                             <!--Grid > Row > Column, muốn dùng Column-2 để dùng lại thì phải tạo row-->
                             <div class="row">
-                                <div class="grid__column50-50">
+                                <div class="grid__column50-50 col m-12 c-12">
                                     <!--sản phẩm-->
                                     <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/1.png" alt="" class="home-product-item__img-2">
                                     </a>
                                 </div>
     
-                                <div class="grid__column50-50">
+                                <div class="grid__column50-50 col m-12 c-12">
                                     <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/2.png" alt="" class="home-product-item__img-2">
                                     </a>
                                 </div>
-                                <div class="grid__column50-50">
+                                <div class="grid__column50-50 col m-12 c-12">
                                     <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/3.png" alt="" class="home-product-item__img-2">
                                     </a>
                                 </div>
-                                <div class="grid__column50-50">
+                                <div class="grid__column50-50 col m-12 c-12">
                                     <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/4.png" alt="" class="home-product-item__img-2">
                                     </a>
@@ -321,18 +321,18 @@
             <!--responsive-->
            <div class="grid wide">
             <div class="row">
-                <div class="grid__column-100">
+                <div class="grid__column-100 col m-12 c-12">
                     <div class="home__product">
                         <!--Grid > Row > Column, muốn dùng Column-2 để dùng lại thì phải tạo row-->
                         <div class="row">
-                            <div class="grid__column50-50">
+                            <div class="grid__column50-50 col m-12 c-12">
                                 <!--sản phẩm-->
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/imac">
                                     <img src="./assets/img/product3/1.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
 
-                            <div class="grid__column50-50">
+                            <div class="grid__column50-50 col m-12 c-12">
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/imac">
                                     <img src="./assets/img/product3/2.png" alt="" class="home-product-item__img-2">
                                 </a>
@@ -355,28 +355,28 @@
             <!--responsive-->
            <div class="grid wide">
             <div class="row">
-                <div class="grid__column-100">
+                <div class="grid__column-100 col m-12 c-12">
                     <div class="home__product">
                         <!--Grid > Row > Column, muốn dùng Column-2 để dùng lại thì phải tạo row-->
                         <div class="row">
-                            <div class="grid__column50-50">
+                            <div class="grid__column50-50 col m-12 c-12">
                                 <!--sản phẩm-->
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/1.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
 
-                            <div class="grid__column50-50">
+                            <div class="grid__column50-50 col m-12 c-12">
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/2.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
-                            <div class="grid__column50-50">
+                            <div class="grid__column50-50 col m-12 c-12">
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/3.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
-                            <div class="grid__column50-50">
+                            <div class="grid__column50-50 col m-12 c-12">
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/4.png" alt="" class="home-product-item__img-2">
                                 </a>
@@ -392,7 +392,7 @@
 
          <!--container 5-->
          <div id="mac-air" class="slider__heading--5">
-            <div class="slider__heading-imgs">
+            <div class="slider__heading-imgs col m-12 c-12">
                 <img src="./assets/img/product5/mac-air.png" alt="" class="slider__heading-img-5">
             </div>
         </div>
@@ -400,18 +400,18 @@
             <!--responsive-->
            <div class="grid wide">
             <div class="row">
-                <div class="grid__column-100">
+                <div class="grid__column-100 col m-12 c-12">
                     <div class="home__product">
                         <!--Grid > Row > Column, muốn dùng Column-2 để dùng lại thì phải tạo row-->
                         <div class="row">
-                            <div class="grid__column50-50">
+                            <div class="grid__column50-50 col m-12 c-12">
                                 <!--sản phẩm-->
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-air">
                                     <img src="./assets/img/product5/1.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
 
-                            <div class="grid__column50-50">
+                            <div class="grid__column50-50 col m-12 c-12">
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-air">
                                     <img src="./assets/img/product5/2.png" alt="" class="home-product-item__img-2">
                                 </a>
