--- a/index.html
+++ b/index.html
@@ -273,28 +273,28 @@
                 <!--responsive-->
                <div class="grid wide">
                 <div class="row">
-                    <div class="grid__column-100 col m-12 c-12">
+                    <div class="col l-12 m-12 c-12">
                         <div class="home__product">
                             <!--Grid > Row > Column, muốn dùng Column-2 để dùng lại thì phải tạo row-->
                             <div class="row">
-                                <div class="grid__column50-50 col m-12 c-12">
+                                <div class=" col l-6 m-12 c-12">
                                     <!--sản phẩm-->
                                     <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/1.png" alt="" class="home-product-item__img-2">
                                     </a>
                                 </div>
     
-                                <div class="grid__column50-50 col m-12 c-12">
+                                <div class=" col l-6 m-12 c-12">
                                     <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/2.png" alt="" class="home-product-item__img-2">
                                     </a>
                                 </div>
-                                <div class="grid__column50-50 col m-12 c-12">
+                                <div class=" col l-6 m-12 c-12">
                                     <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/3.png" alt="" class="home-product-item__img-2">
                                     </a>
                                 </div>
-                                <div class="grid__column50-50 col m-12 c-12">
+                                <div class=" col l-6 m-12 c-12">
                                     <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/mac-mini">
                                         <img src="./assets/img/product2/4.png" alt="" class="home-product-item__img-2">
                                     </a>
@@ -321,18 +321,18 @@
             <!--responsive-->
            <div class="grid wide">
             <div class="row">
-                <div class="grid__column-100 col m-12 c-12">
+                <div class="col l-12 m-12 c-12">
                     <div class="home__product">
                         <!--Grid > Row > Column, muốn dùng Column-2 để dùng lại thì phải tạo row-->
                         <div class="row">
-                            <div class="grid__column50-50 col m-12 c-12">
+                            <div class="col l-6 m-12 c-12">
                                 <!--sản phẩm-->
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/imac">
                                     <img src="./assets/img/product3/1.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
 
-                            <div class="grid__column50-50 col m-12 c-12">
+                            <div class="col l-6 m-12 c-12">
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/imac">
                                     <img src="./assets/img/product3/2.png" alt="" class="home-product-item__img-2">
                                 </a>
@@ -355,28 +355,28 @@
             <!--responsive-->
            <div class="grid wide">
             <div class="row">
-                <div class="grid__column-100 col m-12 c-12">
+                <div class="col l-12 m-12 c-12">
                     <div class="home__product">
                         <!--Grid > Row > Column, muốn dùng Column-2 để dùng lại thì phải tạo row-->
                         <div class="row">
-                            <div class="grid__column50-50 col m-12 c-12">
+                            <div class="col l-6 m-12 c-12">
                                 <!--sản phẩm-->
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/1.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
 
-                            <div class="grid__column50-50 col m-12 c-12">
+                            <div class="col l-6 m-12 c-12">
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/2.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
-                            <div class="grid__column50-50 col m-12 c-12">
+                            <div class="col l-6 m-12 c-12">
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/3.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
-                            <div class="grid__column50-50 col m-12 c-12">
+                            <div class="col l-6 m-12 c-12">
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-pro/13-inch">
                                     <img src="./assets/img/product4/4.png" alt="" class="home-product-item__img-2">
                                 </a>
@@ -400,18 +400,18 @@
             <!--responsive-->
            <div class="grid wide">
             <div class="row">
-                <div class="grid__column-100 col m-12 c-12">
+                <div class="col l-12 m-12 c-12">
                     <div class="home__product">
                         <!--Grid > Row > Column, muốn dùng Column-2 để dùng lại thì phải tạo row-->
                         <div class="row">
-                            <div class="grid__column50-50 col m-12 c-12">
+                            <div class="col l-6 m-12 c-12">
                                 <!--sản phẩm-->
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-air">
                                     <img src="./assets/img/product5/1.png" alt="" class="home-product-item__img-2">
                                 </a>
                             </div>
 
-                            <div class="grid__column50-50 col m-12 c-12">
+                            <div class="col l-6 m-12 c-12">
                                 <a class="home-product-item" href="https://www.apple.com/shop/buy-mac/macbook-air">
                                     <img src="./assets/img/product5/2.png" alt="" class="home-product-item__img-2">
                                 </a>
